[#615712] replace calendar views with views using fullcalendar jquery plugin (remove old_calendar)

--- a/i18n/en.po
+++ b/i18n/en.po
@@ -8,10 +8,10 @@ msgstr ""
 "PO-Revision-Date: 2010-09-15 14:55+0200\n"
 "Last-Translator: Sylvain Thenault <sylvain.thenault@logilab.fr>\n"
 "Language-Team: English <devel@logilab.fr.org>\n"
-"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: en\n"
 "Generated-By: pygettext.py 1.5\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
@@ -415,10 +415,10 @@ msgstr ""
 msgid "Download schema as OWL"
 msgstr ""
 
+msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
-msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
@@ -1011,9 +1011,6 @@ msgctxt "CWRelation"
 msgid "add_permission"
 msgstr "add permission"
 
-msgid "add_permission_object"
-msgstr "has permission to add"
-
 msgctxt "CWGroup"
 msgid "add_permission_object"
 msgstr "can add"
@@ -1021,6 +1018,9 @@ msgstr "can add"
 msgctxt "RQLExpression"
 msgid "add_permission_object"
 msgstr "used to define add permission on"
+
+msgid "add_permission_object"
+msgstr "has permission to add"
 
 msgid "add_relation"
 msgstr "add"
@@ -1031,8 +1031,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
-"%(eidto)s"
+"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
+"(eidto)s"
 msgstr ""
 
 msgid "addrelated"
@@ -1065,9 +1065,6 @@ msgctxt "State"
 msgid "allowed_transition"
 msgstr "allowed transition"
 
-msgid "allowed_transition_object"
-msgstr "incoming states"
-
 msgctxt "BaseTransition"
 msgid "allowed_transition_object"
 msgstr "incoming states"
@@ -1077,6 +1074,9 @@ msgid "allowed_transition_object"
 msgstr "incoming states"
 
 msgctxt "WorkflowTransition"
+msgid "allowed_transition_object"
+msgstr "incoming states"
+
 msgid "allowed_transition_object"
 msgstr "incoming states"
 
@@ -1171,12 +1171,12 @@ msgctxt "Bookmark"
 msgid "bookmarked_by"
 msgstr "bookmarked by"
 
-msgid "bookmarked_by_object"
-msgstr "has bookmarks"
-
 msgctxt "CWUser"
 msgid "bookmarked_by_object"
 msgstr "uses bookmarks"
+
+msgid "bookmarked_by_object"
+msgstr "has bookmarks"
 
 msgid "bookmarks"
 msgstr ""
@@ -1215,9 +1215,6 @@ msgctxt "TrInfo"
 msgid "by_transition"
 msgstr "by transition"
 
-msgid "by_transition_object"
-msgstr "transition information"
-
 msgctxt "BaseTransition"
 msgid "by_transition_object"
 msgstr "transition information"
@@ -1227,6 +1224,9 @@ msgid "by_transition_object"
 msgstr "transition information"
 
 msgctxt "WorkflowTransition"
+msgid "by_transition_object"
+msgstr "transition information"
+
 msgid "by_transition_object"
 msgstr "transition information"
 
@@ -1381,10 +1381,10 @@ msgctxt "WorkflowTransition"
 msgid "condition"
 msgstr "condition"
 
+msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
-msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
@@ -1394,11 +1394,11 @@ msgstr ""
 msgid "config"
 msgstr ""
 
-msgctxt "CWSource"
+msgctxt "CWSourceHostConfig"
 msgid "config"
 msgstr ""
 
-msgctxt "CWSourceHostConfig"
+msgctxt "CWSource"
 msgid "config"
 msgstr ""
 
@@ -1422,10 +1422,10 @@ msgctxt "CWRelation"
 msgid "constrained_by"
 msgstr "constrained by"
 
+msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
-msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
@@ -1439,10 +1439,10 @@ msgctxt "CWUniqueTogetherConstraint"
 msgid "constraint_of"
 msgstr ""
 
+msgctxt "CWEType"
 msgid "constraint_of_object"
 msgstr ""
 
-msgctxt "CWEType"
 msgid "constraint_of_object"
 msgstr ""
 
@@ -1533,8 +1533,8 @@ msgid "creating CWRelation (CWRelation relation_type CWRType %(linkto)s)"
 msgstr "creating relation %(linkto)s"
 
 msgid ""
-"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource "
-"%(linkto)s)"
+"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource %"
+"(linkto)s)"
 msgstr "creating host configuration for source %(linkto)s"
 
 msgid ""
@@ -1623,8 +1623,8 @@ msgid ""
 msgstr "creating workflow-transition leading to state %(linkto)s"
 
 msgid ""
-"creating WorkflowTransition (WorkflowTransition transition_of Workflow "
-"%(linkto)s)"
+"creating WorkflowTransition (WorkflowTransition transition_of Workflow %"
+"(linkto)s)"
 msgstr "creating workflow-transition of workflow %(linkto)s"
 
 msgid "creation"
@@ -1646,12 +1646,12 @@ msgctxt "CWConstraint"
 msgid "cstrtype"
 msgstr "constraint type"
 
-msgid "cstrtype_object"
-msgstr "used by"
-
 msgctxt "CWConstraintType"
 msgid "cstrtype_object"
 msgstr "constraint type of"
+
+msgid "cstrtype_object"
+msgstr "used by"
 
 msgid "csv entities export"
 msgstr ""
@@ -1779,10 +1779,10 @@ msgctxt "CWSource"
 msgid "cw_dont_cross"
 msgstr ""
 
+msgctxt "CWRType"
 msgid "cw_dont_cross_object"
 msgstr ""
 
-msgctxt "CWRType"
 msgid "cw_dont_cross_object"
 msgstr ""
 
@@ -1793,10 +1793,10 @@ msgctxt "CWSourceHostConfig"
 msgid "cw_host_config_of"
 msgstr ""
 
+msgctxt "CWSource"
 msgid "cw_host_config_of_object"
 msgstr ""
 
-msgctxt "CWSource"
 msgid "cw_host_config_of_object"
 msgstr ""
 
@@ -1805,12 +1805,12 @@ msgstr ""
 
 msgctxt "CWSource"
 msgid "cw_may_cross"
-msgstr ""
-
-msgid "cw_may_cross_object"
 msgstr ""
 
 msgctxt "CWRType"
+msgid "cw_may_cross_object"
+msgstr ""
+
 msgid "cw_may_cross_object"
 msgstr ""
 
@@ -1827,14 +1827,14 @@ msgctxt "CWSource"
 msgid "cw_support"
 msgstr ""
 
-msgid "cw_support_object"
-msgstr ""
-
 msgctxt "CWEType"
 msgid "cw_support_object"
 msgstr ""
 
 msgctxt "CWRType"
+msgid "cw_support_object"
+msgstr ""
+
 msgid "cw_support_object"
 msgstr ""
 
@@ -1874,6 +1874,9 @@ msgstr ""
 msgid "date"
 msgstr ""
 
+msgid "day"
+msgstr ""
+
 msgid "deactivate"
 msgstr ""
 
@@ -1905,10 +1908,10 @@ msgctxt "CWEType"
 msgid "default_workflow"
 msgstr "default workflow"
 
+msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
-msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
@@ -1984,14 +1987,14 @@ msgctxt "CWRelation"
 msgid "delete_permission"
 msgstr "delete_permission"
 
-msgid "delete_permission_object"
-msgstr "has permission to delete"
-
 msgctxt "CWGroup"
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
 msgctxt "RQLExpression"
+msgid "delete_permission_object"
+msgstr "has permission to delete"
+
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
@@ -2001,8 +2004,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
-"%(eidto)s"
+"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
+"(eidto)s"
 msgstr ""
 
 msgid "depends on the constraint type"
@@ -2011,19 +2014,7 @@ msgstr ""
 msgid "description"
 msgstr "description"
 
-msgctxt "BaseTransition"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWAttribute"
-msgid "description"
-msgstr "description"
-
 msgctxt "CWEType"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWRType"
 msgid "description"
 msgstr "description"
 
@@ -2031,7 +2022,11 @@ msgctxt "CWRelation"
 msgid "description"
 msgstr "description"
 
-msgctxt "State"
+msgctxt "Workflow"
+msgid "description"
+msgstr "description"
+
+msgctxt "CWAttribute"
 msgid "description"
 msgstr "description"
 
@@ -2039,22 +2034,22 @@ msgctxt "Transition"
 msgid "description"
 msgstr "description"
 
-msgctxt "Workflow"
-msgid "description"
-msgstr "description"
-
 msgctxt "WorkflowTransition"
 msgid "description"
 msgstr "description"
 
-msgid "description_format"
-msgstr "format"
+msgctxt "State"
+msgid "description"
+msgstr "description"
+
+msgctxt "CWRType"
+msgid "description"
+msgstr "description"
 
 msgctxt "BaseTransition"
-msgid "description_format"
-msgstr "format"
+msgid "description"
+msgstr "description"
 
-msgctxt "CWAttribute"
 msgid "description_format"
 msgstr "format"
 
@@ -2062,19 +2057,7 @@ msgctxt "CWEType"
 msgid "description_format"
 msgstr "format"
 
-msgctxt "CWRType"
-msgid "description_format"
-msgstr "format"
-
 msgctxt "CWRelation"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "State"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "Transition"
 msgid "description_format"
 msgstr "format"
 
@@ -2082,7 +2065,27 @@ msgctxt "Workflow"
 msgid "description_format"
 msgstr "format"
 
+msgctxt "CWAttribute"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "Transition"
+msgid "description_format"
+msgstr "format"
+
 msgctxt "WorkflowTransition"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "State"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "CWRType"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "BaseTransition"
 msgid "description_format"
 msgstr "format"
 
@@ -2103,18 +2106,18 @@ msgstr ""
 msgid "destination_state"
 msgstr "destination state"
 
-msgctxt "SubWorkflowExitPoint"
-msgid "destination_state"
-msgstr "destination state"
-
 msgctxt "Transition"
 msgid "destination_state"
 msgstr "destination state"
 
+msgctxt "SubWorkflowExitPoint"
+msgid "destination_state"
+msgstr "destination state"
+
+msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
-msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
@@ -2373,12 +2376,12 @@ msgctxt "CWProperty"
 msgid "for_user"
 msgstr "for user"
 
-msgid "for_user_object"
-msgstr "use properties"
-
 msgctxt "CWUser"
 msgid "for_user_object"
 msgstr "property of"
+
+msgid "for_user_object"
+msgstr "use properties"
 
 msgid "friday"
 msgstr ""
@@ -2401,12 +2404,12 @@ msgctxt "CWRelation"
 msgid "from_entity"
 msgstr "from entity"
 
-msgid "from_entity_object"
-msgstr "subjet relation"
-
 msgctxt "CWEType"
 msgid "from_entity_object"
 msgstr "subjec relation"
+
+msgid "from_entity_object"
+msgstr "subjet relation"
 
 msgid "from_interval_start"
 msgstr "from"
@@ -2418,10 +2421,10 @@ msgctxt "TrInfo"
 msgid "from_state"
 msgstr "from state"
 
+msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
-msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
@@ -2501,6 +2504,9 @@ msgstr "header (center)"
 
 msgid "header-right"
 msgstr "header (right)"
+
+msgid "help"
+msgstr ""
 
 msgid "hide filter form"
 msgstr ""
@@ -2582,10 +2588,10 @@ msgctxt "CWUser"
 msgid "in_group"
 msgstr "in group"
 
+msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
-msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
@@ -2640,10 +2646,10 @@ msgctxt "Workflow"
 msgid "initial_state"
 msgstr "initial state"
 
+msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
-msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
@@ -2900,6 +2906,9 @@ msgstr ""
 msgid "monday"
 msgstr ""
 
+msgid "month"
+msgstr ""
+
 msgid "more actions"
 msgstr ""
 
@@ -2915,25 +2924,37 @@ msgstr ""
 msgid "name"
 msgstr ""
 
-msgctxt "BaseTransition"
-msgid "name"
-msgstr "name"
-
-msgctxt "CWCache"
-msgid "name"
-msgstr "name"
-
-msgctxt "CWConstraintType"
+msgctxt "CWEType"
 msgid "name"
 msgstr ""
 
-msgctxt "CWEType"
+msgctxt "Transition"
+msgid "name"
+msgstr ""
+
+msgctxt "CWSource"
+msgid "name"
+msgstr ""
+
+msgctxt "Workflow"
 msgid "name"
 msgstr ""
 
 msgctxt "CWGroup"
 msgid "name"
 msgstr ""
+
+msgctxt "CWConstraintType"
+msgid "name"
+msgstr ""
+
+msgctxt "WorkflowTransition"
+msgid "name"
+msgstr ""
+
+msgctxt "State"
+msgid "name"
+msgstr "name"
 
 msgctxt "CWPermission"
 msgid "name"
@@ -2943,25 +2964,13 @@ msgctxt "CWRType"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWSource"
-msgid "name"
-msgstr ""
-
-msgctxt "State"
+msgctxt "BaseTransition"
 msgid "name"
 msgstr "name"
 
-msgctxt "Transition"
+msgctxt "CWCache"
 msgid "name"
-msgstr ""
-
-msgctxt "Workflow"
-msgid "name"
-msgstr ""
-
-msgctxt "WorkflowTransition"
-msgid "name"
-msgstr ""
+msgstr "name"
 
 msgid "name of the cache"
 msgstr ""
@@ -3174,10 +3183,10 @@ msgctxt "EmailAddress"
 msgid "prefered_form"
 msgstr "prefered form"
 
+msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
-msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
@@ -3197,10 +3206,10 @@ msgctxt "CWUser"
 msgid "primary_email"
 msgstr "primary email"
 
+msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
 
-msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
 
@@ -3228,20 +3237,17 @@ msgstr ""
 msgid "read_permission"
 msgstr "can be read by"
 
-msgctxt "CWAttribute"
+msgctxt "CWEType"
 msgid "read_permission"
 msgstr "read permission"
 
-msgctxt "CWEType"
+msgctxt "CWAttribute"
 msgid "read_permission"
 msgstr "read permission"
 
 msgctxt "CWRelation"
 msgid "read_permission"
 msgstr "read permission"
-
-msgid "read_permission_object"
-msgstr "has permission to read"
 
 msgctxt "CWGroup"
 msgid "read_permission_object"
@@ -3250,6 +3256,9 @@ msgstr "can be read by"
 msgctxt "RQLExpression"
 msgid "read_permission_object"
 msgstr "can be read by"
+
+msgid "read_permission_object"
+msgstr "has permission to read"
 
 msgid "regexp matching host(s) to which this config applies"
 msgstr ""
@@ -3287,10 +3296,10 @@ msgctxt "CWRelation"
 msgid "relation_type"
 msgstr "relation type"
 
+msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
-msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
@@ -3304,14 +3313,14 @@ msgstr ""
 msgid "relations deleted"
 msgstr ""
 
-msgid "relations_object"
-msgstr ""
-
 msgctxt "CWAttribute"
 msgid "relations_object"
 msgstr ""
 
 msgctxt "CWRelation"
+msgid "relations_object"
+msgstr ""
+
 msgid "relations_object"
 msgstr ""
 
@@ -3328,11 +3337,11 @@ msgctxt "BaseTransition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "CWPermission"
+msgctxt "Transition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "Transition"
+msgctxt "CWPermission"
 msgid "require_group"
 msgstr "require group"
 
@@ -3340,10 +3349,10 @@ msgctxt "WorkflowTransition"
 msgid "require_group"
 msgstr "require group"
 
+msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
-msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
@@ -3544,10 +3553,10 @@ msgctxt "CWEType"
 msgid "specializes"
 msgstr "specializes"
 
+msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
-msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
@@ -3584,10 +3593,10 @@ msgctxt "State"
 msgid "state_of"
 msgstr "state of"
 
+msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
-msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
@@ -3631,20 +3640,20 @@ msgctxt "WorkflowTransition"
 msgid "subworkflow_exit"
 msgstr "subworkflow exit"
 
-msgid "subworkflow_exit_object"
-msgstr "subworkflow exit of"
-
 msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_exit_object"
 msgstr "subworkflow exit of"
 
-msgid "subworkflow_object"
-msgstr "subworkflow of"
+msgid "subworkflow_exit_object"
+msgstr "subworkflow exit of"
 
 msgctxt "Workflow"
 msgid "subworkflow_object"
 msgstr "subworkflow of"
 
+msgid "subworkflow_object"
+msgstr "subworkflow of"
+
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
@@ -3652,10 +3661,10 @@ msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
+msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
-msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
@@ -3769,10 +3778,10 @@ msgctxt "CWRelation"
 msgid "to_entity"
 msgstr "to entity"
 
+msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
-msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
@@ -3786,12 +3795,15 @@ msgctxt "TrInfo"
 msgid "to_state"
 msgstr "to state"
 
-msgid "to_state_object"
-msgstr "transitions to this state"
-
 msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
+
+msgid "to_state_object"
+msgstr "transitions to this state"
+
+msgid "today"
+msgstr ""
 
 msgid "todo_by"
 msgstr "to do by"
@@ -3830,10 +3842,10 @@ msgctxt "WorkflowTransition"
 msgid "transition_of"
 msgstr "transition of"
 
+msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
-msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
@@ -3850,10 +3862,6 @@ msgctxt "BaseTransition"
 msgid "type"
 msgstr "type"
 
-msgctxt "CWSource"
-msgid "type"
-msgstr ""
-
 msgctxt "Transition"
 msgid "type"
 msgstr "type"
@@ -3861,6 +3869,10 @@ msgstr "type"
 msgctxt "WorkflowTransition"
 msgid "type"
 msgstr "type"
+
+msgctxt "CWSource"
+msgid "type"
+msgstr ""
 
 msgid "type here a sparql query"
 msgstr ""
@@ -3942,22 +3954,22 @@ msgstr ""
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgctxt "CWAttribute"
-msgid "update_permission"
-msgstr "can be updated by"
-
 msgctxt "CWEType"
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgid "update_permission_object"
-msgstr "has permission to update"
+msgctxt "CWAttribute"
+msgid "update_permission"
+msgstr "can be updated by"
 
 msgctxt "CWGroup"
 msgid "update_permission_object"
 msgstr "has permission to update"
 
 msgctxt "RQLExpression"
+msgid "update_permission_object"
+msgstr "has permission to update"
+
 msgid "update_permission_object"
 msgstr "has permission to update"
 
@@ -3994,10 +4006,10 @@ msgctxt "CWUser"
 msgid "use_email"
 msgstr "use email"
 
+msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
-msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
@@ -4180,10 +4192,10 @@ msgctxt "Workflow"
 msgid "workflow_of"
 msgstr "workflow of"
 
+msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
-msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
