--- a/i18n/de.po
+++ b/i18n/de.po
@@ -1717,6 +1717,12 @@ msgstr ""
 msgid "ctxcomponents_anonuserlink_description"
 msgstr ""
 
+msgid "ctxcomponents_appliname"
+msgstr ""
+
+msgid "ctxcomponents_appliname_description"
+msgstr ""
+
 msgid "ctxcomponents_bookmarks_box"
 msgstr "Lesezeichen-Box"
 
@@ -2557,7 +2563,7 @@ msgstr "hCalendar"
 msgid "has_text"
 msgstr "enthält Text"
 
-msgid "header-center"
+msgid "header-left"
 msgstr ""
 
 msgid "header-right"
@@ -3899,6 +3905,13 @@ msgstr "zu erledigen bis"
 
 msgid "toggle check boxes"
 msgstr "Kontrollkästchen umkehren"
+
+msgid "tr_count"
+msgstr ""
+
+msgctxt "TrInfo"
+msgid "tr_count"
+msgstr ""
 
 msgid "transaction undoed"
 msgstr "Transaktion rückgängig gemacht"
