--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -1362,6 +1362,9 @@ msgstr "changements appliqués"
 msgid "click here to see created entity"
 msgstr "cliquez ici pour voir l'entité créée"
 
+msgid "click here to see edited entity"
+msgstr "cliquez ici pour voir l'entité modifiée"
+
 msgid "click on the box to cancel the deletion"
 msgstr "cliquez dans la zone d'édition pour annuler la suppression"
 
