--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.10.8-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 02 Feb 2011 11:09:22 +0100
+
 cubicweb (3.10.7-1) unstable; urgency=low
 
   * new upstream release
