--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.11.1-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 07 Mar 2011 17:21:28 +0100
+
 cubicweb (3.11.0-1) unstable; urgency=low
 
   * new upstream release
