--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.11.2-1) unstable; urgency=low
+
+  * new upstream release 
+
+ -- Nicolas Chauvat <nicolas.chauvat@logilab.fr>  Mon, 28 Mar 2011 19:18:54 +0200
+
 cubicweb (3.11.1-1) unstable; urgency=low
 
   * new upstream release
