[widgets] handle no value label for tristate radios, put default separator on class for easier redefinition - closes #1624839

--- a/i18n/de.po
+++ b/i18n/de.po
@@ -2755,6 +2755,9 @@ msgstr ""
 "zeigt an, welcher Zustand standardmäßig benutzt werden soll, wenn eine "
 "Entität erstellt wird"
 
+msgid "indifferent"
+msgstr "gleichgültig"
+
 msgid "info"
 msgstr "Information"
 
