[parsers] various refactorings
- inline method process_one
- rename value to others in action methods
- turn _complete_url into _complete_item
- turn _related_link callbacks into a boolean parameter create_when_not_found
- fix spelling

--- a/i18n/en.po
+++ b/i18n/en.po
@@ -154,7 +154,7 @@ msgid "'%s' action doesn't take any options"
 msgstr ""
 
 #, python-format
-msgid "'%s' action require 'linkattr' option"
+msgid "'%s' action requires 'linkattr' option"
 msgstr ""
 
 msgid "(UNEXISTANT EID)"
